--- a/src/main/resources/templates/convert/pdf-to-img.html
+++ b/src/main/resources/templates/convert/pdf-to-img.html
@@ -46,7 +46,7 @@
                   <label for="dpi">DPI:</label>
                   <input type="number" name="dpi" class="form-control" id="dpi" min="1" step="1" value="300" required>
                 </div>
-                <button type="submit" id="submitBtn downloadBtn" class="btn btn-primary" th:text="#{pdfToImage.submit}"></button>
+                <button type="submit" id="submitBtn" class="btn btn-primary" th:text="#{pdfToImage.submit}"></button>
               </form>
             </div>
           </div>
