add authenticated string

--- a/src/main/resources/templates/addUsers.html
+++ b/src/main/resources/templates/addUsers.html
@@ -26,6 +26,7 @@
                     <th th:text="#{username}">Username</th>
                     <th th:text="#{adminUserSettings.roles}">Roles</th>
                     <th th:text="#{adminUserSettings.actions}">Actions</th>
+                    <th th:text="#{adminUserSettings.authenticated}">Authenticated</th>
                   </tr>
                 </thead>
                 <tbody>
