add translation and more

--- a/src/main/resources/templates/addUsers.html
+++ b/src/main/resources/templates/addUsers.html
@@ -38,6 +38,7 @@
                         <button type="submit" th:text="#{delete}">Delete</button>
                       </form>
                     </td>
+                    <td th:text="${user.authenticationType}"></td>
                   </tr>
                 </tbody>
               </table>
@@ -50,7 +51,7 @@
               <form action="/api/v1/user/admin/saveUser" method="post">
                 <div class="mb-3">
                   <label for="username" th:text="#{username}">Username</label>
-                  <input type="text" class="form-control" name="username" pattern="[a-zA-Z0-9]+" th:title="#{adminUserSettings.usernameInfo}" required>
+                  <input type="text" class="form-control" name="username" pattern="([a-zA-Z0-9]+|^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$)" th:title="#{adminUserSettings.usernameInfo}" required>
                 </div>
                 <div class="mb-3">
                   <label for="password" th:text="#{password}">Password</label>
@@ -59,6 +60,7 @@
                 <div class="mb-3">
                   <label for="role" th:text="#{adminUserSettings.role}">Role</label>
                   <select name="role" class="form-control" required>
+                    <option value="" disabled selected th:text="#{selectFillter}">-- Select --</option>
                     <option th:each="roleDetail : ${roleDetails}" th:value="${roleDetail.key}" th:text="#{${roleDetail.value}}">Role</option>
                   </select>
                 </div>
@@ -70,10 +72,41 @@
                 <!-- Add other fields as required -->
                 <button type="submit" class="btn btn-primary" th:text="#{adminUserSettings.submit}">Save User</button>
               </form>
+              <hr />
+              <h2 th:text="#{adminUserSettings.changeUserRole}">Change User's Role</h2>
+              <button class="btn btn-outline-info" data-toggle="tooltip" data-placement="auto" th:title="#{downgradeCurrentUserLongMessage}" th:text="#{help}">Help</button>
+              <div th:if="${param.messageType != null and param.messageType.size() > 0 and (param.messageType[0] == 'userNotFound' or param.messageType[0] == 'downgradeCurrentUser')}" class="alert alert-danger">
+                <span th:if="${param.messageType[0] == 'userNotFound'}" th:text="#{userNotFoundMessage}">Username not found</span>
+                <span th:if="${param.messageType[0] == 'downgradeCurrentUser'}" th:text="#{downgradeCurrentUserMessage}">Cannot downgrade current user's role</span>
+              </div>
+              <form action="/api/v1/user/admin/changeRole" method="post">
+                <div class="mb-3">
+                  <label for="username" th:text="#{username}">Username</label>
+                  <select name="username" class="form-control" required>
+                    <option value="" disabled selected th:text="#{selectFillter}">-- Select --</option>
+                    <option th:each="user : ${users}" th:if="${user.username != currentUsername}" th:value="${user.username}" th:text="${user.username}">Username</option>
+                  </select>
+                </div>
+                <div class="mb-3">
+                  <label for="role" th:text="#{adminUserSettings.role}">Role</label>
+                  <select name="role" class="form-control" required>
+                    <option value="" disabled selected th:text="#{selectFillter}">-- Select --</option>
+                    <option th:each="roleDetail : ${roleDetails}" th:value="${roleDetail.key}" th:text="#{${roleDetail.value}}">Role</option>
+                  </select>
+                </div>
+
+                <!-- Add other fields as required -->
+                <button type="submit" class="btn btn-primary" th:text="#{adminUserSettings.submit}">Save User</button>
+              </form>
             </div>
           </div>
         </div>
       </div>
+      <script th:inline="javascript">
+        $(document).ready(function() {
+          $('[data-toggle="tooltip"]').tooltip()
+        })
+      </script>
       <th:block th:insert="~{fragments/footer.html :: footer}"></th:block>
     </div>
   </body>
