--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -132,24 +132,29 @@
             }
           }
         </script>
-        <div th:if="${logoutMessage}" class="alert alert-success" th:text="${logoutMessage}"></div>
-        <div th:if="${param.messageType != null and param.messageType.size() > 0 and param.messageType[0] == 'credsUpdated'}" class="alert alert-success">
-          <span th:text="#{changedCredsMessage}">Default message if not found</span>
-        </div>
         <img class="mb-4" src="favicon.svg?v=2" alt="" width="144" height="144">
         <h1 class="h1 mb-3 fw-normal" th:text="${@appName}">Stirling-PDF</h1>
         <div th:if="${oAuth2Enabled}">
           <a href="oauth2/authorization/oidc" class="w-100 btn btn-lg btn-primary" th:text="#{login.ssoSignIn}">Login Via SSO</a>
-          <div class="text-danger text-center">
+          <br>
+          <div th:if="${error}" class="alert alert-danger text-danger text-center">
             <!-- oauth2AutoCreateDisabled -->
-            <div th:if="${error == 'oauth2AutoCreateDisabled'}" th:text="#{login.oauth2AutoCreateDisabled}">OAUTH2 Auto-Create User Disabled.</div>
+            <div th:if="${error == 'oauth2AutoCreateDisabled'}" th:text="#{login.oauth2AutoCreateDisabled}">OAuth2: Auto-Create User Disabled.</div>
             <!-- oauth2AuthenticationError -->
-            <div th:if="${error == 'oauth2AuthenticationError'}">OAUTH2: User already exists.</div>
+            <div th:if="${error == 'oauth2AuthenticationError'}" th:text="#{userAlreadyExistsMessage}">OAuth2: User already exists.</div>
+            <!-- invalidUsername -->
+            <div th:if="${error == 'invalidUsername'}" th:text="#{invalidUsernameMessage}">OAUTH2: Invalid username.</div>
           </div>
           <hr />
         </div>
           
         <h2 class="h5 mb-3 fw-normal" th:text="#{login.signinTitle}">Please sign in</h2>
+        <div class="text-danger text-center">
+          <div th:if="${logoutMessage}" class="alert alert-success" th:text="${logoutMessage}"></div>
+          <div th:if="${param.messageType != null and param.messageType.size() > 0 and param.messageType[0] == 'credsUpdated'}" class="alert alert-success">
+            <span th:text="#{changedCredsMessage}">Default message if not found</span>
+          </div>
+        </div>
         <form th:action="@{login}" method="post">
           <div class="form-floating">
             <input type="text" class="form-control bg-dark text-light" id="username" name="username" placeholder="admin">
