--- a/src/main/resources/templates/fragments/common.html
+++ b/src/main/resources/templates/fragments/common.html
@@ -23,6 +23,7 @@
 
     <!-- jQuery -->
     <script src="js/thirdParty/jquery.min.js"></script>
+    <script src="js/thirdParty/jquery.validate.min.js"></script>
     <script src="js/thirdParty/jszip.min.js"></script>
 
     <!-- Bootstrap -->
