--- a/src/main/resources/templates/addUsers.html
+++ b/src/main/resources/templates/addUsers.html
@@ -48,10 +48,11 @@
                 <span th:if="${param.messageType[0] == 'usernameExists'}" th:text="#{usernameExistsMessage}">Default message if not found</span>
                 <span th:if="${param.messageType[0] == 'invalidUsername'}" th:text="#{invalidUsernameMessage}">Default message if not found</span>
               </div>
-              <form action="/api/v1/user/admin/saveUser" method="post">
+              <form id="formsaveuser" action="/api/v1/user/admin/saveUser" method="post">
                 <div class="mb-3">
                   <label for="username" th:text="#{username}">Username</label>
-                  <input type="text" class="form-control" name="username" pattern="([a-zA-Z0-9]+|^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$)" th:title="#{adminUserSettings.usernameInfo}" required>
+                  <input type="text" class="form-control" name="username" id="username" th:title="#{adminUserSettings.usernameInfo}" required>
+                  <span id="usernameError" style="display: none;" th:text="#{invalidUsernameMessage}">Invalid username!</span>
                 </div>
                 <div class="mb-3">
                   <label for="password" th:text="#{password}">Password</label>
@@ -103,9 +104,55 @@
         </div>
       </div>
       <script th:inline="javascript">
+        jQuery.validator.addMethod("usernamePattern", function(value, element) {
+            return this.optional(element) || /^[a-zA-Z0-9][a-zA-Z0-9@._+-]*[a-zA-Z0-9]$|^(?=.{1,64}@)[A-Za-z0-9]+(\.[A-Za-z0-9_+.-]+)*@[^-][A-Za-z0-9-]+(\.[A-Za-z0-9-]+)*(\.[A-Za-z]{2,})$/.test(value);
+        }, "Invalid username format");
         $(document).ready(function() {
-          $('[data-toggle="tooltip"]').tooltip()
-        })
+          $('[data-toggle="tooltip"]').tooltip();
+
+          $('#formsaveuser').validate({
+            rules: {
+              username: {
+                required: true,
+                usernamePattern: true
+              },
+              password: {
+                required: true
+              }
+              },
+              messages: {
+                  username: {
+                      usernamePattern: /*[[#{invalidUsernameMessage}]]*/ "Invalid username format"
+                  },
+              },
+              errorPlacement: function(error, element) {
+                  if (element.attr("name") === "username") {
+                      $("#usernameError").text(error.text()).show();
+                  } else {
+                      error.insertAfter(element);
+                  }
+              },
+              success: function(label, element) {
+                  if ($(element).attr("name") === "username") {
+                      $("#usernameError").hide();
+                  }
+              }
+          });
+
+          $('#username').on('input', function() {
+              var usernameInput = $(this);
+              var isValid = usernameInput[0].checkValidity();
+              var errorSpan = $('#usernameError');
+
+              if (isValid) {
+                  usernameInput.removeClass('invalid').addClass('valid');
+                  errorSpan.hide();
+              } else {
+                  usernameInput.removeClass('valid').addClass('invalid');
+                  errorSpan.show();
+              }
+          });
+        });
       </script>
       <th:block th:insert="~{fragments/footer.html :: footer}"></th:block>
     </div>
