--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -137,22 +137,32 @@
         <div th:if="${oAuth2Enabled}">
           <a href="oauth2/authorization/oidc" class="w-100 btn btn-lg btn-primary" th:text="#{login.ssoSignIn}">Login Via SSO</a>
           <br>
-          <div th:if="${error}" class="alert alert-danger text-danger text-center">
+          <div th:if="${erroroauth}" class="alert alert-danger text-danger text-center">
             <!-- oauth2AutoCreateDisabled -->
-            <div th:if="${error == 'oauth2AutoCreateDisabled'}" th:text="#{login.oauth2AutoCreateDisabled}">OAuth2: Auto-Create User Disabled.</div>
-            <!-- oauth2AuthenticationError -->
-            <div th:if="${error == 'oauth2AuthenticationError'}" th:text="#{userAlreadyExistsMessage}">OAuth2: User already exists.</div>
+            <div th:if="${erroroauth == 'oauth2AutoCreateDisabled'}" th:text="#{login.oauth2AutoCreateDisabled}">OAuth2: Auto-Create User Disabled.</div>
             <!-- invalidUsername -->
-            <div th:if="${error == 'invalidUsername'}" th:text="#{invalidUsernameMessage}">OAUTH2: Invalid username.</div>
-            <!-- badcredentials -->
-            <div th:if="${error == 'badcredentials'}" th:text="#{login.invalid}">Invalid username or password.</div>
-            <!-- locked -->
-            <div th:if="${error == 'locked'}" th:text="#{login.locked}">Your account has been locked. </div>
+            <div th:if="${erroroauth == 'invalidUsername'}" th:text="#{invalidUsernameMessage}">OAUTH2: Invalid username.</div>
+            <!-- oauth2AuthenticationErrorWeb -->
+            <div th:if="${erroroauth == 'oauth2AuthenticationErrorWeb'}">OAUTH2: User is web user.</div>
+            <!-- invalid_token_response -->
+            <div th:if="${erroroauth == 'invalid_token_response'}">OAUTH2: invalid token response.</div>
+            <!-- Web user -->
+            <div th:if="${erroroauth == 'userAlreadyExistsWeb'}" th:text="#{userAlreadyExistsWebMessage}"></div>
+            <!-- Other errors -->
+            <div th:if="${erroroauth != 'oauth2AutoCreateDisabled' and erroroauth != 'invalidUsername' and erroroauth != 'oauth2AuthenticationErrorWeb' and erroroauth != 'invalid_token_response' and erroroauth != 'userAlreadyExistsWeb'}" th:text="${erroroauth}">OAUTH2: ???.</div>
           </div>
           <hr />
         </div>
           
-        <h2 class="h5 mb-3 fw-normal" th:text="#{login.signinTitle}">Please sign in</h2>
+        <h2 class="h5 mb-3 fw-normal" th:text="#{login.signinTitle}">Please sign in</h2><br>
+        <div th:if="${error}" class="alert alert-danger text-danger text-center">
+          <!-- badcredentials -->
+          <div th:if="${error == 'badcredentials'}" th:text="#{login.invalid}">Invalid username or password.</div>
+          <!-- locked -->
+          <div th:if="${error == 'locked'}" th:text="#{login.locked}">Your account has been locked.</div>
+          <!-- oauth2AuthenticationError -->
+          <div th:if="${error == 'oauth2AuthenticationError'}" th:text="#{userAlreadyExistsOAuthMessage}">OAuth2: User already exists.</div>
+        </div>
         <div class="text-danger text-center">
           <div th:if="${logoutMessage}" class="alert alert-success" th:text="${logoutMessage}"></div>
           <div th:if="${param.messageType != null and param.messageType.size() > 0 and param.messageType[0] == 'credsUpdated'}" class="alert alert-success">
