--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -11,7 +11,10 @@
         <br><br>
         <div class="container">
           <div class="row justify-content-center">
-            <div class="col-md-6 bg-card"></div>
+            <div class="col-md-6 bg-card">
+              <h1>About Stirling-PDF</h1>
+              
+            </div>
           </div>
         </div>
       </div>
