--- a/custom_theme/partials/content.html
+++ b/custom_theme/partials/content.html
@@ -29,4 +29,7 @@
 </div>
 {% endif %}
 <hr>
+<svg class="watermark" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 500 500">
+    <text x="50%" y="50%" font-size="60" text-anchor="middle" fill="rgba(0, 0, 0, 0.1)">Stirling-PDF Stirling-PDF Stirling-PDF Stirling-PDF Stirling-PDF Stirling-PDF Stirling-PDF Stirling-PDF Stirling-PDF </text>
+</svg>
 {% block footer %}{% endblock %}
