--- a/custom_theme/templates/home.html
+++ b/custom_theme/templates/home.html
@@ -46,6 +46,9 @@
         <a href="/contribute/" class="md-button">Contribute to Striling-PDF</a>
     </div>
 </section>
+<svg class="watermark" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 500 500">
+    <text x="50%" y="50%" font-size="60" text-anchor="middle" fill="rgba(0, 0, 0, 0.1)">Stirling-PDF Stirling-PDF Stirling-PDF Stirling-PDF Stirling-PDF Stirling-PDF Stirling-PDF Stirling-PDF Stirling-PDF </text>
+</svg>
 {% endblock %}
 {% block content %}{% endblock %}
 {% block footer %}{% endblock %}
